--- a/package.json
+++ b/package.json
@@ -21,10 +21,14 @@
 	},
 	"homepage": "https://github.com/LambdaSchool/Server-Testing#readme",
 	"devDependencies": {
-		"jest": "^23.6.0",
-		"supertest": "^3.3.0"
+		"jest": "^24.3.0",
+		"supertest": "^3.4.2"
 	},
 	"dependencies": {
-		"express": "^4.16.4"
+		"dotenv": "^6.2.0",
+		"express": "^4.16.4",
+		"helmet": "^3.15.1",
+		"morgan": "^1.9.1",
+		"sqlite3": "^4.0.6"
 	}
 }
