--- a/package.json
+++ b/package.json
@@ -1,34 +1,36 @@
 {
-	"name": "testingserver",
-	"version": "1.0.0",
-	"description": "Server Testing Project",
-	"main": "server.js",
-	"scripts": {
-		"test": "jest --watch --verbose"
-	},
-	"jest": {
-		"testEnvironment": "node"
-	},
-	"repository": {
-		"type": "git",
-		"url": "git+https://github.com/LambdaSchool/Server-Testing.git"
-	},
-	"keywords": [],
-	"author": "",
-	"license": "ISC",
-	"bugs": {
-		"url": "https://github.com/LambdaSchool/Server-Testing/issues"
-	},
-	"homepage": "https://github.com/LambdaSchool/Server-Testing#readme",
-	"devDependencies": {
-		"jest": "^24.3.0",
-		"supertest": "^3.4.2"
-	},
-	"dependencies": {
-		"dotenv": "^6.2.0",
-		"express": "^4.16.4",
-		"helmet": "^3.15.1",
-		"morgan": "^1.9.1",
-		"sqlite3": "^4.0.6"
-	}
+  "name": "testingserver",
+  "version": "1.0.0",
+  "description": "Server Testing Project",
+  "main": "server.js",
+  "scripts": {
+    "test": "jest --watch --verbose",
+    "server": "nodemon index.js"
+  },
+  "jest": {
+    "testEnvironment": "node"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/LambdaSchool/Server-Testing.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/LambdaSchool/Server-Testing/issues"
+  },
+  "homepage": "https://github.com/LambdaSchool/Server-Testing#readme",
+  "devDependencies": {
+    "jest": "^24.3.0",
+    "nodemon": "^1.18.10",
+    "supertest": "^3.4.2"
+  },
+  "dependencies": {
+    "dotenv": "^6.2.0",
+    "express": "^4.16.4",
+    "helmet": "^3.15.1",
+    "morgan": "^1.9.1",
+    "sqlite3": "^4.0.6"
+  }
 }
